tests/ui/ferrocene/compiler-arguments/upper_c_linker-flavor/upper_c_linker-flavor_space-empty.rs
//@ check-fail
//@ compile-flags: -C linker-flavor
//~? ERROR requires one of

fn main() {}

// ferrocene-annotations: um_rustc_C_linker_flavor
